--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Xin chào</h1>
     <p>Xin chào VN</p>
-    <a href="#">xin chào Việt Nam</a>
+    <a href="#">Xin chào Việt Nam</a>
 </body>
 </html>
